implement output&error redirect to console in newly create task process